Removed most references to ServiceProvider.addSubscription